<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Abdelkrim Ouajjit SDA Assign3 2018</string>
    <string-array name="ui_time_entries">
        <item>" 2"</item>
        <item>" 3"</item>
        <item>" 4"</item>
        <item>" 5"</item>
        <!--  Correcting the two numbers as string   -->
        <item>"10"</item>
        <item>"14"</item>

    </string-array>
    <string name="customer_name">Name</string>
    <string name="ready_time">Delivery/Collection in (days)</string>
    <string name="order_message_1">Please find my order attached</string>
    <string name="order_message_collect">I will collect it in </string>
    <string name="order_message_instructions">Delivery Address -or- For Collection</string>
    <string name="order_message_end">Regards</string>
    <string name="customer_name_blank">You did not enter your name.</string>
    <string name="notification_title">Notification!</string>
    <string name="image_confirm">Image saved successfully </string>
    <string name="to_email">my-tshirt@sda.ie</string>
    <string name="email_subject">Order Request </string>
    <string name="Product_List">Product List </string>
    <string name="Order_TShirt">Order T-Shirt </string>
    <string name="Enter_Your_Name">Enter Your Name </string>
    <string name="Take_photo_for_TShirt">Take photo for T-Shirt </string>
    <string name="Send_Order">Send Order</string>




</resources>
